updating to 1.17